[package]
name = "mac_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Chan <okcdz@diverse.space>"]
repository = "https://github.com/vincentdchan/mac_proxy"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "polodb_core"
path = "src/lib.rs"

[dependencies]
serde_json = "*"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
